# rafg

./: .dockerignore  .env.example  .gitignore  ACM_Biography_Yamil_Rodriguez.tex  COMMIT_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.demo  ESCALATION_ANALYSIS_SUMMARY.md  FAILURE_TESTS_INSTRUCTIONS.md  Makefile  RAGF_ACM_Paper_v2.0_Complete.tex  README.md  README_DOWNLOAD_PAPER.md  commit_audit.sh  commit_escalation_analysis.sh  comprehensive_commit.sh  deploy_vps.sh  docker-compose.yml  final_commit.sh  generate_latency_plot.py  generate_latency_simple.py  generate_overhead_plot.py  generate_p95_plot.py  insert_escalation_sections.py  requirements.txt  run_analysis.sh  run_failure_tests.sh  setup_and_test.sh
audit/: ledger.py  metrics.py  schema.sql
benchmark/: RAGF_Neo4j_Article_FINAL_2.docx
benchmark/ontology/: neo4j_loader.py  postgres_loader.py  psd2_data.py  scale_generator.py
benchmark/queries/: plot_results.py  run_benchmark.py  run_scale_benchmark.py
benchmark/results/: benchmark_results.json  scale_benchmark_results.json  scale_test_verbs.json
docs/: ARCHITECTURE.md  EXECUTIVE_SUMMARY.md
docs/audit/: AUDIT_ROADMAP.md  AUDIT_ROADMAP_REVISED.md  EXECUTION_NOTES.md  SECURITY_AUDIT_v2.0.md
docs/migration/: FIX_HEALTH_CHECK.md  MIGRATION_V2_PLAN.md  V2_MIGRATION_COMPLETE.md  VERIFICATION_V2.md
gateway/: decision_engine.py  intent_normalizer.py  main.py  neo4j_client.py
gateway/ontologies/: aviation_seed.cypher  schema.cypher
gateway/validators/: __init__.py  base_validator.py  safety_validator.py
harness_auditor/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml  pyproject.toml
harness_auditor/docs/: ARCHITECTURE.md  CRITERIA.md  GRAPH_MODEL.md  INTEGRATION.md
harness_auditor/docs/decisions/: ADR-001-gds-scope.md
harness_auditor/examples/: README.md
harness_auditor/examples/custom_cc/: README.md  register.py
harness_auditor/examples/custom_cc/queries/: ccx_critical_must_deny.cypher
harness_auditor/notebooks/: 01_quickstart.ipynb
harness_auditor/src/harness_auditor/: __init__.py  _attestation.py  _audit_lock.py  _environment.py  bundle.py  cli.py  loader.py  report.py  runner.py
harness_auditor/src/harness_auditor/queries/: cc06_coverage_map.cypher  cc11_constraint_centrality.cypher
harness_auditor/src/harness_auditor/schemas/: __init__.py  ontology_schema.py  report_schema.py
harness_auditor/tests/: test_attestation.py  test_audit_lock.py  test_bundle.py  test_cli_flags.py  test_custom_cc.py  test_environment.py  test_error_messages.py  test_examples.py  test_report.py  test_runner_skip_hooks.py  test_schemas.py  test_thresholds.py  test_verify_command.py
harness_auditor/tests/fixtures/: _attestation_expected.txt
infra/docker/: INTEGRATION_GUIDE.md  README_DEMO.md  create_auth.sh  docker-compose.demo.yml  nginx.conf
papers/: Makefile  RAGF_v2_3.tex
papers/appendices/: Appendix_Fintech_v1.2_Academic.tex  README.md
ragf_core/escalation/: resolution_tracker.py
ragf_core/governance/: bias_detector.py
ragf_core/state/: uncertain_state.py
results/escalation_analysis/: aviation_resolution_metrics.json  healthcare_resolution_metrics.json
scripts/: analyze_escalations.py  monitor.sh  preflight.sh
shared/: exceptions.py  models.py
tests/: conftest.py  smoke_test.py
(+15 files in other folders)
