[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-auditor"
version = "0.2.0"
description = "Pre-execution certification of RAGF governance harnesses via Cypher over Neo4j"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Yamil Montaña", email = "yamil@reflexio.studio" },
]
keywords = [
  "ragf",
  "agentic-ai",
  "governance",
  "neo4j",
  "cypher",
  "certification",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
  "neo4j>=5.26,<6.0",
  "pydantic>=2.6,<3.0",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-PyYAML",
]
# Extras for running notebooks/01_quickstart.ipynb. Kept separate from
# `dev` because pulling Jupyter into a CI image inflates it by hundreds of
# MB unnecessarily — only contributors who actually open the notebook need
# this set.
notebook = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
  "pandas>=2.0",
  "matplotlib>=3.8",
]
# Ed25519-signed attestation bundles for regulated environments. Optional
# because the core HMAC pipeline does not need an asymmetric primitive;
# only `harness-audit bundle` / `verify-bundle` require it.
bundle = [
  "cryptography>=42.0",
]

[project.scripts]
harness-audit = "harness_auditor.cli:app"

[project.urls]
Homepage = "https://github.com/cronocom/ragf"
Paper = "https://doi.org/10.5281/zenodo.20285406"
Issues = "https://github.com/cronocom/ragf/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
harness_auditor = ["queries/*.cypher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "requires_neo4j: integration tests that need a live Neo4j sandbox (auto-skipped when unreachable)",
]
filterwarnings = [
  # The neo4j driver uses asyncio.iscoroutinefunction(), which Python 3.14
  # marks as deprecated (scheduled for removal in 3.16). The fix lives
  # upstream in neo4j-python and is not our concern. Suppressing here
  # keeps pytest output legible without hiding warnings from our own code.
  "ignore::DeprecationWarning:neo4j",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Typer's idiomatic Option/Argument defaults trigger B008 (function-call
# defaults). The pattern is canonical for Typer apps; suppressing here is
# preferable to scattering noqa across every flag declaration.
"src/harness_auditor/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
